Fix appbar and job creation page dark mode styling

--- a/ITPortal/Pages/CreateScriptJob.razor.css
+++ b/ITPortal/Pages/CreateScriptJob.razor.css
@@ -24,6 +24,7 @@
     padding: 24px;
     border: solid 1px #D2D2D2;
     margin-bottom: 40px;
+    background-color: rgba(0,0,0,.07);
 }
 
 .input-group {
