--- a/ITPortal/wwwroot/css/mud-edits.css
+++ b/ITPortal/wwwroot/css/mud-edits.css
@@ -39,3 +39,7 @@ body {
 .mud-appbar .mud-toolbar {
     box-shadow: 0 3px 6px rgb(0 0 0 / 0.3);
 }
+
+.mud-input.mud-input-filled {
+    background-color: rgba(0,0,0,.07) !important;
+}
